2006-03-03  John W. Eaton  <jwe@octave.org>

	* dirfns.cc (Vconfirm_recursive_rmdir): New static variable.
	(symbols_of_dirfns): DEFVAR it.
	(confirm_recursive_rmdir): New function.
	(Frmdir): Maybe ask for confirmation for recursive removal.
	Require second arg to be "s".

	* input.cc (octave_yes_or_no): New function.
	(Fyes_or_no): New function.
	* input.h (octave_yes_or_no): Provide decl.

2006-03-02  John W. Eaton  <jwe@octave.org>

	* dirfns.cc (Fmkdir, Frmdir): Now commands.

2006-02-20  David Bateman  <dbateman@free.fr>

	* ov.h (virtual bool is_sparse_type (bool)): New virtual function
	* ov-base.h (bool is_sparse_type (bool)): New function
	* ov-base-sparse.h (bool is_sparse_type (bool)): New function
	* DLD-FUNCTIONS/ccolamd.cc, DLD-FUNCTION/colamd.cc, 
	DLD-FUNCTIONS/__glpk__.cc, DLD-FUNCTIONS/splu.cc,
	DLD-FUNCTIONS/sparse.cc, DLD-FUNCTIONS/matrix_type.cc, pt-mat.cc:
	Replace us of 'arg.class_name () == "sparse"' with
	'arg.is_sparse_type ()'
	
2006-02-20  David Bateman  <dbateman@free.fr>
	
	* pt-mat.cc (class tm_row_const): Add any_sparse bool variable.
	(tm_row_const::tm_row_const_rep::do_init_element): Initialize
	any_sparse variable if any matrice is sparse.
	(class tm_const): Add any_sparse bool variable.
	(tm_const::init): Initialize any_sparse variable.
	(tree_matrix::rvalue): If any matrix is sparse use sparse matrix
	as initial matrix for concatenation
	* DLD-FUNCTIONS/matrix_type.cc: Add tests for new rectangular
	diagonal, permuted diagonal, triangular and permuted triangular
	matrices

2006-02-20  John W. Eaton  <jwe@octave.org>

	* toplev.cc (__builtin_delete, __builtin_new): Use std::cerr for
	messages instead of std::cout.
	(main_loop, do_octave_atexit): Use octave_stdout, not std::cout.

2006-02-15  John W. Eaton  <jwe@octave.org>

	* parse.y (Fautoload): Return struct array of autoload info if
	nargin == 0.

2006-02-15  Keith Goodman  <kwgoodman@gmail.com>

	* help.cc (keywords): Doc string fix.
